Fixed gaps using grid-template-columns and -rows

--- a/kelvin-lim-mini-assignment5/src/CellButton.css
+++ b/kelvin-lim-mini-assignment5/src/CellButton.css
@@ -3,6 +3,4 @@ button {
   width: 100px;
   border: 1px solid gray;
   background-color: white;
-  margin-top: 0;
-  margin-bottom: 0;
 }
